최종 리팩토링